<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/grey">


    <TextView
        android:id="@+id/chatifyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/title_chatify"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AddEditTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="19dp"
        android:paddingEnd="19dp"
        app:layout_constraintTop_toBottomOf="@id/chatifyTextView"
        android:layout_marginTop="16dp">


        <EditText
            android:id="@+id/firstnameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_firstname"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            />

        <EditText
            android:id="@+id/lastnameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_lastname"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/firstnameTextView"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_email"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/lastnameTextView"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_password"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/emailTextView"
            android:layout_marginTop="15dp"/>
        <EditText
            android:id="@+id/repasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_repassword"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/passwordTextView"
            android:layout_marginTop="15dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/RadioButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="19dp"
        android:paddingEnd="19dp"
        app:layout_constraintTop_toBottomOf="@id/AddEditTextLayout"
        android:layout_marginTop="15dp">

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/male"
                />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/female" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AddButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="19dp"
        android:paddingEnd="19dp"
        app:layout_constraintTop_toBottomOf="@id/RadioButtonsLayout"
        tools:layout_editor_absoluteX="-16dp">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="135dp"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/roundbtn"
            android:paddingTop="19dp"
            android:paddingBottom="19dp"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/exitbutton"
            android:layout_width="135dp"
            android:layout_height="56dp"
            android:layout_marginStart="48dp"
            android:background="@drawable/roundbtn"
            android:paddingTop="19dp"
            android:paddingBottom="19dp"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="@id/btn_next"
            app:layout_constraintStart_toEndOf="@id/btn_next"
            app:layout_constraintTop_toTopOf="@id/btn_next"
            app:layout_constraintVertical_bias="0.441" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/already"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/AddButtonLayout"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/alreadyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already"
                />

            <TextView
                android:id="@+id/loginLinkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/mustered"
                android:layout_marginStart="8dp"/>

        </LinearLayout>
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
